k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: formula-se
  labels:
    app.kubernetes.io/part-of: formula-se
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
